@startuml
skinparam classAttributeIconSize 0
abstract class AbstractProduct {
    +use():void
}
class ConcreteProduct {
    +use():void
}
abstract class AbstractFactory {
    +createProduct()
}
class ConcreteFactory {
    +createProduct()
}

AbstractFactory <|-- ConcreteFactory
AbstractProduct <|-- ConcreteProduct
ConcreteFactory .> ConcreteProduct
Client --> AbstractFactory
Client --> AbstractProduct

@enduml